# test_subtensor

./: Cargo.toml
debugging_logs/: active_stake.txt  bonds_1_init.txt  bonds_2_(outdatedmask).txt  bonds_3_(mask+norm).txt  bonds_4_delta.txt  bonds_5_delta(norm).txt  bonds_6_ema.txt  consensus.txt  dividends.txt  incentive.txt  normalised_stake.txt  rank_after.txt  stake.txt  weight_1_initial.txt  weight_2_permit.txt  weight_3_(permit+diag).txt  weight_4_(permit+diag+outdate).txt  weight_5_(mask+norm).txt  weight_6_final.txt
src/: chain.rs  main.rs  math.rs
